--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -57,16 +57,21 @@ div.navigation li:hover {
 
 /* apply now button */
 .apply {
-    border-radius: 5px;
-    background-color: var(--white);
+    color: var(--white);
+    background-color: var(--rusty-red);
 
     a {
-        color: var(--black);
+        color: var(--white);
+        border-radius: 0px;
     }
 }
 
-.apply:hover, .logout-active:hover {
-    background-color: var(--jasmine) !important;
+.apply:hover {
+    border-radius: 0px !important;
+    background-color: var(--active-red);
+    a {
+        color: var(--white) !important;
+    }
 }
 
 /* dropdown styling */
