--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -78,7 +78,7 @@
                         </li>
                         <li><a routerLink="/profile/{{userId()}}/grades">My Grades</a></li>
                         <li><a routerLink="/profile/{{userId()}}/details">My Profile</a></li>
-                        <li class="logout-active"><a (click)="logout()">Logout</a></li>
+                        <li class="logout-active"><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </nav>
             </div>
