Loader added to apply-now view on apply.

--- a/src/app/account/apply-now/apply-now.component.html
+++ b/src/app/account/apply-now/apply-now.component.html
@@ -192,9 +192,7 @@
             }
         </div>
         @if(isLoading()) {
-        <div class="loader-container">
-            <span class="loader"></span>
-        </div>
+        <app-loader></app-loader>
         } @else {
         <div class="form-btn">
             <!--  -->
