Loader implemented in registration view on register.

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -191,7 +191,7 @@
             </div>
             }
         </div>
-        @if (isLoading) {
+        @if (isLoading()) {
         <app-loader></app-loader>
         } @else {
         <div class="form-btn">
