href="javascript:void(0)" removed from a-elements.

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -30,7 +30,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li><a href="javascript:void(0)" routerLink="/profile/{{userId()}}/details">My Profile</a></li>
+                        <li><a routerLink="/profile/{{userId()}}/details">My Profile</a></li>
                         <li class="logout-active"><a href="javascript:void(0)" (click)="logout()">Logout</a></li>
                     </ul>
                 </nav>
@@ -41,11 +41,11 @@
                     <ul>
                         <li>
                             <div class="dropdown">
-                                <a href="javascript:void(0)" routerLink="/all-subjects" class="dropdown-btn underline">Subjects</a>
+                                <a routerLink="/all-subjects" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
-                                    <a href="javascript:void(0)" routerLink="/my-subjects">My Subjects</a>
-                                    <a href="javascript:void(0)" routerLink="/create-subject">Create Subject</a>
-                                    <a href="javascript:void(0)" routerLink="/all-subjects">All Subjects</a>
+                                    <a routerLink="/all-subjects">All Subjects</a>
+                                    <a routerLink="/my-subjects">My Subjects</a>
+                                    <a routerLink="/create-subject">Create Subject</a>
                                 </div>
                             </div>
                         </li>
@@ -53,8 +53,8 @@
                             <div class="dropdown">
                                 <a routerLink="/all-students" class="dropdown-btn underline">Students</a>
                                 <div class="dropdown-content">
-                                    <a href="javascript:void(0)" routerLink="/pending-applications">Pending Applications</a>
                                     <a routerLink="/all-students">All Students</a>
+                                    <a routerLink="/pending-applications">Pending Applications</a>
                                 </div>
                             </div>
                         </li>
@@ -71,8 +71,8 @@
                             <div class="dropdown">
                                 <a routerLink="/all-subjects" class="dropdown-btn underline">Subjects</a>
                                 <div class="dropdown-content">
-                                    <a routerLink="/my-subjects">My Subjects</a>
                                     <a routerLink="/all-subjects">All Subjects</a>
+                                    <a routerLink="/my-subjects">My Subjects</a>
                                 </div>
                             </div>
                         </li>
